# tablab-core

./: .clang-format  .cmake-format.py  CMakeLists.txt  LICENSE  README.md  flake.nix  justfile
include/taglab/: concepts.h  entry.h  library.h  location.h  storage.h
include/taglab/storage/: sqlite.h
include/taglab/utils/: concepts.h  meta.h
src/: CMakeLists.txt
src/greeter/: greeter.cpp  greeter.h
src/taglab/: entry.cpp  library.cpp  location.cpp
src/taglab/storage/: sqlite.cpp  sqlite.h
tests/: CMakeLists.txt  test_locations_and_entries.cpp  utils.h
tests/acceptance/: test_get_entries_in_library.cpp  test_locations_and_entries.cpp
tests/greeter/: test_greeter.cpp
tools/nix/cmake-scripts/: default.nix
tools/nix/format-cmake/: default.nix
tools/nix/package-project-cmake/: default.nix
